--- a/hotelovy_system_ema_richnakova_97025.tex
+++ b/hotelovy_system_ema_richnakova_97025.tex
@@ -1,8 +1,8 @@
 \documentclass[sp,z]{FEIstyle}
 
 \FEIauthor{Ema Richnáková}
-\FEItitle{Medzinárodný hotelový systém\newline Vlastný, marketingovo pôsobivý, komerčne úspešný a jedinečný názov}
-\FEItitleEn{International hotel system\newline Vlastný, marketingovo pôsobivý, komerčne úspešný a jedinečný názov}
+\FEItitle{Medzinárodný hotelový systém\newline\projectName}
+\FEItitleEn{International hotel management system\newline\projectName}
 \FEIcourse{Softvérové inžinierstvo}
 \FEIcourseEn{Software engineering}
 \FEIcourseTag{B--SWI}
