--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,4 +1,4 @@
-\newacronym{sw}{SW}{Star Wars}
-\newacronym{hw}{HW}{Halo Wars}
-\newacronym{cdma}{CDMA}{Code Division Multiple Access} 
-\newacronym{gsm}{GSM}{Global System for Mobile communication}
+\newacronym{sw}{SW}{software}
+\newacronym{hw}{HW}{hardware}
+\newacronym{mhs}{MHS}{Medzinárodný hotelový systém}
+\newacronym{api}{API}{rozhranie pre programovanie aplikácií (Application Programming Interface)}
