--- a/includes/history.tex
+++ b/includes/history.tex
@@ -1,4 +1,6 @@
 \begin{versionhistory}
-    \vhEntry{1.0}{25.10.2022}{Ema Richnáková}{dokument vytvorený}
-    \vhEntry{1.1}{25.10.2022}{Ema Richnáková}{dokument vytvorený}
+    \vhEntry{1.0}{25.10.2022}{Ema Richnáková}
+    {vytvorený dokument, história zmien, obsah, úvod do problematiky}
+    \vhEntry{2.0}{6.11.2022}{Ema Richnáková}
+    {používateľské požiadavky}
 \end{versionhistory}
