--- a/includes/core.tex
+++ b/includes/core.tex
@@ -18,65 +18,105 @@ cestovné kancelárie a rôzne iné spoločnosti, ktoré sa zaoberajú turizmom
 a hotelierstvom. 
 Po zaregistrovaní poskytovateľa ubytovania v \acrshort{mhs} a overení 
 pravdivosti údajov je mu vytvorený účet v systéme, do ktorého môže vložiť 
-svoju ponuku ubytovania a k nemu prezentačné materiály o ubytovaní a informácie 
-ako repertoár poskytovaných služieb, cenník, počet voľných miest v rôznych 
-časových obdobiach, kontaktné údaje, podmienky a pravidlá ubytovania a 
-poprípade zaujímavé tipy na výlety, občerstvenie alebo aktivity. 
-Neregistrovaný poskytovateľ nie je schopný vykonať takéto úkony v 
-\acrshort{mhs}, kvôli ochrane potenciálneho zákazníka, aby mal istotu, že 
-poskytovateľ je skutočná osoba alebo subjekt a ubytovacie zariadenie vôbec 
-existuje alebo existuje na danom mieste a vedia mu garantovať všetko, 
-čo by bolo v ponuke ubytovania uvádzané a nebol teda zákazník zavádzaný. 
-Potenciálny alebo už aktuálny zákazník registráciou do \acrshort{mhs} vie 
-získať možnosť hodnotiť ubytovacie zariadenia ako aj ich poskytovateľov a 
-nimi ponúkané služby a to aj anonymne a taktiež mu \acrshort{mhs} vie uložiť a 
-poskytnúť k nahliadnutiu celú históriu rezervácii ubytovaní.
-Neregistrovaní zákazníci vedia iba vyhľadávať a prezerať si 
-všetky ponuky ubytovania v rôznych krajinách sveta.
-Na samotnú rezerváciu ubytovania musí zákazník byť registrovaný a to z dôvodu 
-ochrany poskytovateľov ubytovania, aby zákazník bol viazaný na určité pravidlá 
-a povinosti pri rezervovaní ubytovania a aby poskytovateľ mal zaručený kontakt so 
-zákazníkom, pri vzniknutých komplikáciach z poskytovateľovej strany.
-\acrshort{mhs} poskytuje podporu pre automatické zisťovanie rôznych parametrov 
-prostredníctvom webových služieb alebo ako \acrfull{api}, ktoré 
-zabezpečujú dostupnosť a aktuálnosť údajov v \acrshort{mhs}.
-Vďaka \acrshort{mhs} \projectName\ poskytovateľ nemusí mať na spravovanie 
-rezervácií vyhradeného zamestnanca alebo skupinu personálu, keďže o veľkú časť 
-sa postará už zákazník ako o samotnú rezerváciu izby/zariadenia v jeho 
-určenom čase, vyplnenie a kontrolu správnosti údajov a oboznámenie sa so 
-službami. Poskytovateľ už musí len zobrať na vedomie zákazníkovú rezerváciu, 
-prijať ju alebo ju zamietnuť s relevantným dôvodom a kontaktovať s tým 
-zákazníka. Pri prijatí rezervácie musí zabezpečiť personál, ak nejaký má, a 
-zabezpečí sľúbené služby a čistotu priestorov pri príchode alebo počas celého 
-pobytu zákazníka, podľa vopred dohodnutých podmienok.
+svoju ponuku ubytovania a k nemu prezentačné materiály o ubytovaní a 
+informácie ako repertoár poskytovaných služieb, cenník, počet voľných 
+miest v rôznych časových obdobiach, kontaktné údaje, podmienky a 
+pravidlá ubytovania a poprípade zaujímavé tipy na výlety, občerstvenie 
+alebo aktivity. Neregistrovaný poskytovateľ nie je schopný vykonať takéto 
+úkony v \acrshort{mhs}, kvôli ochrane potenciálneho zákazníka, aby mal 
+istotu, že poskytovateľ je skutočná osoba alebo subjekt a ubytovacie 
+zariadenie vôbec existuje alebo existuje na danom mieste a vedia mu 
+garantovať všetko, čo by bolo v ponuke ubytovania uvádzané a nebol teda 
+zákazník zavádzaný. Potenciálny alebo už aktuálny zákazník registráciou 
+do \acrshort{mhs} vie získať možnosť hodnotiť ubytovacie zariadenia ako 
+aj ich poskytovateľov a nimi ponúkané služby a to aj anonymne a taktiež 
+mu \acrshort{mhs} vie uložiť a poskytnúť k nahliadnutiu celú históriu 
+rezervácii ubytovaní. Neregistrovaní zákazníci vedia iba vyhľadávať a 
+prezerať si všetky ponuky ubytovania v rôznych krajinách sveta.
+Na samotnú rezerváciu ubytovania musí zákazník byť registrovaný a to z 
+dôvodu ochrany poskytovateľov ubytovania, aby zákazník bol viazaný na 
+určité pravidlá a povinosti pri rezervovaní ubytovania a aby poskytovateľ 
+mal zaručený kontakt so zákazníkom, pri vzniknutých komplikáciach z 
+poskytovateľovej strany. \acrshort{mhs} poskytuje podporu pre automatické 
+zisťovanie rôznych parametrov prostredníctvom webových služieb alebo ako 
+\acrfull{api}, ktoré zabezpečujú dostupnosť a aktuálnosť údajov v 
+\acrshort{mhs}. Vďaka \acrshort{mhs} \projectName\ poskytovateľ nemusí mať 
+na spravovanie rezervácií vyhradeného zamestnanca alebo skupinu personálu, 
+keďže o veľkú časť sa postará už zákazník ako o samotnú rezerváciu 
+izby/zariadenia v jeho určenom čase, vyplnenie a kontrolu správnosti údajov 
+a oboznámenie sa so službami. Poskytovateľ už musí len zobrať na vedomie 
+zákazníkovú rezerváciu, prijať ju alebo ju zamietnuť s relevantným dôvodom 
+a kontaktovať s tým zákazníka. Pri prijatí rezervácie musí zabezpečiť 
+personál, ak nejaký má, a zabezpečí sľúbené služby a čistotu priestorov 
+pri príchode alebo počas celého pobytu zákazníka, podľa vopred dohodnutých 
+podmienok.
 
 \newpage
+
 \subsection{Používateľské požiadavky}
-\begin{enumerate}[label=\Alph*]
+\begin{enumerate}[label=\Alph*.]
     \item Funkcionálne požiadavky
     \begin{itemize}
-        \item List entries start with the \verb|\item| command.
-        \item Individual entries are indicated with a black dot, a so-called bullet.
-        \item The text in the entries may be of any length.
+        \item Vyhľadanie ubytovania
+        \item Filtrovanie ubytovania podľa rôznych parametrov
+        \item Prehliadanie ponuky ubytovania
+        \item Prehliadanie informácií o ubytovaní
+        \item Prehliadanie tipov od poskytovateľa pri ubytovaní
+        \item Rezervácia ubytovania
+        \item Platba za ubytovanie
+        \item Zákazník nedokáže rezervovať ubytovanie bez registrácie
+        \item Registrácia zákazníka
+        \item Prihlásenie zákazníka do jeho používateľského konta pomocou 
+        mena a hesla
+        \item Registrácia ubytovacieho zariadenia
+        \item Poskytoytovateľ nedokáže registrovať ubytovanie bez 
+        registrácie a overenia údajov
+        \item Zadanie informácií k poskytovanému ubytovaniu
+        \item Hodnotenie ubytovania alebo poskytovateľa
+        \item Zákazník nedokáže hodnotiť ubytovanie alebo poskytovateľa 
+        bez registrácie
+        \item Hodnotenie zákazníka od poskytovateľa
+        \item Poskytovateľ nedokáže hodnotiť ubytovaného zákazníka bez 
+        registrácie
+        \item Prehliadanie histórie rezervácií
+        \item Prehliadanie pravidiel a povinností pri ubytovaní a 
+        používaní systému
+        \item Kontaktovanie poskytovateľa ubytovania
+        \item Kontaktovanie zákazníka
     \end{itemize}
     \item Nefunkcionálne požiadavky
     \begin{itemize}
-        \item List entries start with the \verb|\item| command.
-        \item Individual entries are indicated with a black dot, a so-called bullet.
-        \item The text in the entries may be of any length.
+        \item Odlíšenie používateľského prostredia podľa typu zákazníka - 
+        človek hľadajúci ubytovanie a poskytovateľ ubytovania
+        \item Výsledky vyhľadávania sú zobrazené v akceptovateľnom čase
+        \item Systém je kompatibilný so všetkými modernými operačnými
+        systémamy
+        \item Systém je kompatibilný so všetkými modernými webovými 
+        prehliadačmi
+        \item Systém je lokalizovaný v anglickom aj slovenskom jazyku
+        \item Systém má prehľadné a moderné používateľské prostredie
+        \item Overenie pravdivosti údajov pri registrácií poskytovateľa 
+        ubytovania
+        \item Využitie enkrypcie dát, pre znemožnenie botom vytvárať si 
+        zákaznícke kontá a rezervovať si ubytovania
+        \item Pri vyplnaní údajov do formulárov by malo byť dostatočne 
+        vysvetlené, aké dáta sú požadované
+        \item Systém poskytuje rôzne platobné metódy pri vykonávaní platby za 
+        ubytovanie
     \end{itemize}
     \item Doménové požiadavky
     \begin{itemize}
-        \item List entries start with the \verb|\item| command.
-        \item Individual entries are indicated with a black dot, a so-called bullet.
-        \item The text in the entries may be of any length.
+        \item Systém dodržiava ochranu osobných údajov
+        \item Určité údaje sú viditeľné len v rámci rezervačného kontraktu 
+        pre poskytovateľa a zákazníka
+        \item Poskytovateľove údaje sú ešte využité pre overenie informácií na 
+        úradoch a v systémoch
     \end{itemize}
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Systémová špecifikácia}
-V diagramoch použite notáciu UML verzie 2.x
 
 \subsection{Diagramy prípadov použitia.}
 Nakreslite diagram(y) prípadov použitia pre daný softvérový
